# ec530

./: .gitignore  .gitmodules
.github/workflows/: assignment1_test.yml  chatroom_tests.yml  house-management-api_test.yml
assignment-1/: .coverage  README.md  gps.py  main.py  requirements.txt
assignment-1/tests/: profiling.py  test_basics.py
assignment-2/: README.md
assignment-2/controllers/: House.controller.py
assignment-2/models/: Device.py  House.py  Room.py  User.py
assignment1/: .coverage  README.md  gps.py  main.py  requirements.txt
assignment1/tests/: profiling.py  test_basics.py
chatroom/: Dockerfile  README.md  application.py  client.py  database.py  docker-compose.yml  docker-entrypoint.sh  message.py  network.py  peer.py  peer_client.py  requirements.txt  server.py  startscipts.txt
chatroom/old/: client.py  server.py
chatroom/tests/: test_client.py  test_server.py
house-management-api/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  housemanagement-openapi.json  requirements.txt
house-management-api/src/: main.py
house-management-api/src/api/: __init__.py
house-management-api/src/core/: __init__.py  config.py
house-management-api/tests/: test_devices.py  test_houses.py  test_rooms.py  test_users.py
pubsubexamples/: ex.go  ex.py  ex2.go  ex2.py  ex3.py
spreadsheet-generator/: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sqldb.py
spreadsheet-generator/datasheet_d0w/: requirements.txt  sample_students.csv
spreadsheet-generator/tests/: test_db.py
(+18 files in other folders)
